--- a/src/app/question-page/question-page.component.html
+++ b/src/app/question-page/question-page.component.html
@@ -6,6 +6,6 @@
     </ng-template>
 
     <div class="button-container">
-        <button mat-raised-button color="primary" (click)="onClickMe()">Click me!</button>
+        <button mat-raised-button color="primary" (click)="onSubmit()">Submit!</button>
     </div>
 </div>
