feat(enhance_ui): add background, images, warning symbol

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="container">
-    <router-outlet></router-outlet>
+<div
+    [ngStyle]="{backgroundImage:'url(./assets/images/background.png)', 'background-repeat': 'no-repeat', 'background-size': 'cover', 'height': '100vh' }">
+    <div class="container" style="padding-top: 80px">
+        <router-outlet></router-outlet>
+    </div>
 </div>
