--- a/src/app/results-page/results-page.component.css
+++ b/src/app/results-page/results-page.component.css
@@ -5,4 +5,14 @@
     align-items: center;
     text-align: center;
   }
+  .left, .right {
+    width: 50%; /* Floated elements technically need a width specified. */
+  }
   
+  .left {
+    float: left;
+  }
+  
+  .right {
+    float: right;
+  }
