--- a/src/app/question-card/question-card.component.html
+++ b/src/app/question-card/question-card.component.html
@@ -1,5 +1,9 @@
 <mat-card>
     <mat-card-content>
+        <div class="warning-symbol" [hidden]="!this.checked || (this.checked && this.question?.value != undefined)">
+            <span class="material-icons" style="color: rgb(165, 42, 42);">warning</span>
+
+        </div>
         <h1>{{this.question?.text}}</h1>
         <p></p>
         <div class="left" [style.font-size.px]="convertToFontSize(100 - this.question?.value!)">I strongly agree</div>
@@ -10,6 +14,6 @@
         <mat-slider value="50" step="5" min="0" max="100" (input)="onInputChange($event)">
             <input matSliderThumb>
         </mat-slider>
-        <h5>{{this.question!.value}}</h5>
+        <!-- <h5>{{this.question!.value}}</h5> -->
     </mat-card-content>
 </mat-card>
